--- a/fibonacci.html
+++ b/fibonacci.html
@@ -24,7 +24,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">Future Imperfect</a></h1>
+			<h1><a href="index.html">Golden Ratio</a></h1>
 			<nav class="links">
 				<ul>
 					<li><a href="index.html"><b>Home</b></a></li>
@@ -114,7 +114,7 @@
 								alt="" /></a>
 					</div>
 				</header>
-				<span class="image featured"><img src="images/clem-onojeghuo-T7gi_cyrkdg-unsplash.jpg" alt="" /></span>
+				<span class="image featured"><img src="images/Fibonacci_tiling_of_the_plane_and_approximation_to_Golden_Ratio.gif" alt="" /></span>
 
 				<footer>
 					<ul class="stats">
