--- a/geometry.html
+++ b/geometry.html
@@ -24,7 +24,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">Future Imperfect</a></h1>
+			<h1><a href="index.html">Golden Ratio</a></h1>
 			<nav class="links">
 				<ul>
 					<li><a href="index.html"><b>Home</b></a></li>
