reference page remaining

--- a/archi.html
+++ b/archi.html
@@ -63,27 +63,45 @@
 			<section>
 				<ul class="links">
 					<li>
-						<a href="#">
-							<h3>Lorem ipsum</h3>
-							<p>Feugiat tempus veroeros dolor</p>
+						<a href="art.html">
+							<h3>Golden Ratio And Art</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Dolor sit amet</h3>
-							<p>Sed vitae justo condimentum</p>
+						<a href="archi.html">
+							<h3>Golden Ratio And Architecture</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Feugiat veroeros</h3>
-							<p>Phasellus sed ultricies mi congue</p>
+						<a href="nature.html">
+							<h3>Golden Ratio And Nature</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Etiam sed consequat</h3>
-							<p>Porta lectus amet ultricies</p>
+						<a href="angle.html">
+							<h3>Relation with Golden Angle</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="rule.html">
+							<h3>Golden Ratio and Rule of Thirds</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="geometry.html">
+							<h3>Usage in Geometry</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="fibonacci.html">
+							<h3>Fibonacci and Golden Ratio</h3>
+
 						</a>
 					</li>
 				</ul>
@@ -163,7 +181,24 @@
 							width="500" height="500" src="images/taj.PNG" alt="">
 					</div>
 				</div>
-
+				<br>
+				<div class="row featurette d-flex justify-content-center align-items-center">
+					<div class="col-md-7">
+						<h2 class="featurette-heading">Modern Architecture<span class="text-muted"></span></h2>
+						<p class="lead">Role of Golden Ratio in Contemporary Architecture is legitimate.People were able
+							to find the alleged use of Golden Ratio in numerous iconic buildings, such as the Parthenon,
+							the Cathedral of Notre Dame, the Taj Mahal, etc. Even one of the most popular protagonists
+							of Modernism, the famous and equally infamous Le Corbusier, apparently used to deploy the
+							Golden Ratio in architectural design, although this principle was based on his utter faith
+							in science and mathematics, rather than a desire to achieve beauty. Another famous architect
+							from Switzerland, Mario Botta (the author of the old SF MoMA building) is also familiar with
+							this pattern.</p>
+					</div>
+					<div class="col-md-5">
+						<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+							width="500" height="500" src="images/moma.PNG" alt="">
+					</div>
+				</div>
 			</div>
 		</div>
 
