--- a/art.html
+++ b/art.html
@@ -1,22 +1,19 @@
+<!DOCTYPE HTML>
+<!--
+	Future Imperfect by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-	<title>Art</title>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<style></style>
+	<title>Index</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
-<body class="single">
+<body class="single is-preload">
 
 	<!-- Wrapper -->
 	<div id="wrapper">
@@ -38,7 +35,7 @@
 					<li class="search">
 						<a class="fa-search" href="#search">Search</a>
 						<form id="search" method="get" action="#">
-							<input type="text" name="query" placeholder="Search">
+							<input type="text" name="query" placeholder="Search" />
 						</form>
 					</li>
 					<li class="menu">
@@ -49,7 +46,66 @@
 		</header>
 
 		<!-- Menu -->
+		<section id="menu">
 
+			<!-- Search -->
+			<section>
+				<form class="search" method="get" action="#">
+					<input type="text" name="query" placeholder="Search" />
+				</form>
+			</section>
+
+			<!-- Links -->
+			<section>
+				<ul class="links">
+
+					<li>
+						<a href="archi.html">
+							<h3>Golden Ratio And Architecture</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="nature.html">
+							<h3>Golden Ratio And Nature</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="angle.html">
+							<h3>Relation with Golden Angle</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="rule.html">
+							<h3>Golden Ratio and Rule of Thirds</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="geometry.html">
+							<h3>Usage in Geometry</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="fibonacci.html">
+							<h3>Fibonacci and Golden Ratio</h3>
+
+						</a>
+					</li>
+				</ul>
+			</section>
+
+			<!-- Actions -->
+			<section>
+				<ul class="actions stacked">
+					<li><a href="#" class="button large fit">Log In</a></li>
+				</ul>
+			</section>
+
+		</section>
 
 		<!-- Main -->
 		<div id="main">
@@ -120,7 +176,7 @@
 				<header>
 					<div class="title">
 						<h2><a href="#">Salvador Dali</a></h2>
-						<p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+
 					</div>
 					<div class="meta">
 
@@ -159,8 +215,7 @@
 				</div>
 			</div>
 		</div>
-		<br>
-		<br>
+		<br><br>
 		<!-- Footer -->
 		<section id="footer">
 			<ul class="icons">
@@ -170,7 +225,6 @@
 				<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
 				<li><a href="contact.html" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
-
 		</section>
 
 	</div>
@@ -181,144 +235,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<section id="menu">
 
-		<!-- Search -->
-		<section>
-			<form class="search" method="get" action="#">
-				<input type="text" name="query" placeholder="Search">
-			</form>
-		</section>
-
-		<!-- Links -->
-		<section>
-			<ul class="links">
-				<li>
-					<a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-						<h3>Lorem ipsum</h3>
-						<p>Feugiat tempus veroeros dolor</p>
-					</a>
-				</li>
-				<li>
-					<a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-						<h3>Dolor sit amet</h3>
-						<p>Sed vitae justo condimentum</p>
-					</a>
-				</li>
-				<li>
-					<a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-						<h3>Feugiat veroeros</h3>
-						<p>Phasellus sed ultricies mi congue</p>
-					</a>
-				</li>
-				<li>
-					<a href="#" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-						<h3>Etiam sed consequat</h3>
-						<p>Porta lectus amet ultricies</p>
-					</a>
-				</li>
-			</ul>
-		</section>
-
-		<!-- Actions -->
-		<section>
-			<ul class="actions stacked">
-				<li><a href="#" class="button large fit" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Log
-						In</a></li>
-			</ul>
-		</section>
-
-	</section>
-
-	<!-- Code injected by live-server -->
-	<script type="text/javascript">
-		// <![CDATA[  <-- For SVG support
-		if ('WebSocket' in window) {
-			(function () {
-				function refreshCSS() {
-					var sheets = [].slice.call(document.getElementsByTagName("link"));
-					var head = document.getElementsByTagName("head")[0];
-					for (var i = 0; i < sheets.length; ++i) {
-						var elem = sheets[i];
-						var parent = elem.parentElement || head;
-						parent.removeChild(elem);
-						var rel = elem.rel;
-						if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-							var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-							elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-						}
-						parent.appendChild(elem);
-					}
-				}
-				var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-				var address = protocol + window.location.host + window.location.pathname + '/ws';
-				var socket = new WebSocket(address);
-				socket.onmessage = function (msg) {
-					if (msg.data == 'reload') window.location.reload();
-					else if (msg.data == 'refreshcss') refreshCSS();
-				};
-				if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-					console.log('Live reload enabled.');
-					sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-				}
-			})();
-		}
-		else {
-			console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-		}
-	// ]]>
-	</script>
-
-	<!-- Code injected by live-server -->
-	<script type="text/javascript">
-		// <![CDATA[  <-- For SVG support
-		if ('WebSocket' in window) {
-			(function () {
-				function refreshCSS() {
-					var sheets = [].slice.call(document.getElementsByTagName("link"));
-					var head = document.getElementsByTagName("head")[0];
-					for (var i = 0; i < sheets.length; ++i) {
-						var elem = sheets[i];
-						var parent = elem.parentElement || head;
-						parent.removeChild(elem);
-						var rel = elem.rel;
-						if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-							var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-							elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-						}
-						parent.appendChild(elem);
-					}
-				}
-				var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-				var address = protocol + window.location.host + window.location.pathname + '/ws';
-				var socket = new WebSocket(address);
-				socket.onmessage = function (msg) {
-					if (msg.data == 'reload') window.location.reload();
-					else if (msg.data == 'refreshcss') refreshCSS();
-				};
-				if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-					console.log('Live reload enabled.');
-					sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-				}
-			})();
-		}
-		else {
-			console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-		}
-	// ]]>
-	</script>
-
-	    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
