--- a/single.html
+++ b/single.html
@@ -59,27 +59,45 @@
 			<section>
 				<ul class="links">
 					<li>
-						<a href="#">
-							<h3>Lorem ipsum</h3>
-							<p>Feugiat tempus veroeros dolor</p>
+						<a href="art.html">
+							<h3>Golden Ratio And Art</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Dolor sit amet</h3>
-							<p>Sed vitae justo condimentum</p>
+						<a href="archi.html">
+							<h3>Golden Ratio And Architecture</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Feugiat veroeros</h3>
-							<p>Phasellus sed ultricies mi congue</p>
+						<a href="nature.html">
+							<h3>Golden Ratio And Nature</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Etiam sed consequat</h3>
-							<p>Porta lectus amet ultricies</p>
+						<a href="angle.html">
+							<h3>Relation with Golden Angle</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="rule.html">
+							<h3>Golden Ratio and Rule of Thirds</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="geometry.html">
+							<h3>Usage in Geometry</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="fibonacci.html">
+							<h3>Fibonacci and Golden Ratio</h3>
+
 						</a>
 					</li>
 				</ul>
