--- a/calculate.html
+++ b/calculate.html
@@ -61,27 +61,45 @@
             <section>
                 <ul class="links">
                     <li>
-                        <a href="#">
-                            <h3>Lorem ipsum</h3>
-                            <p>Feugiat tempus veroeros dolor</p>
+                        <a href="art.html">
+                            <h3>Golden Ratio And Art</h3>
+
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <h3>Dolor sit amet</h3>
-                            <p>Sed vitae justo condimentum</p>
+                        <a href="archi.html">
+                            <h3>Golden Ratio And Architecture</h3>
+
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <h3>Feugiat veroeros</h3>
-                            <p>Phasellus sed ultricies mi congue</p>
+                        <a href="nature.html">
+                            <h3>Golden Ratio And Nature</h3>
+
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <h3>Etiam sed consequat</h3>
-                            <p>Porta lectus amet ultricies</p>
+                        <a href="angle.html">
+                            <h3>Relation with Golden Angle</h3>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="rule.html">
+                            <h3>Golden Ratio and Rule of Thirds</h3>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="geometry.html">
+                            <h3>Usage in Geometry</h3>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="fibonacci.html">
+                            <h3>Fibonacci and Golden Ratio</h3>
+
                         </a>
                     </li>
                 </ul>
@@ -127,18 +145,12 @@
                     <p class="lead">Because φ is the ratio between positive quantities, φ is necessarily positive</p>
                     <img class="img-fluid" src="images/5eq.PNG" alt="">
                 </div>
-                <br><br>
-                <div class="col-md-5 order-md-1">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" src="images/phi.png" alt="">
-                </div>
-                <br>
+                
                 <div class="col-md-5 order-md-1">
                     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                         height="500" src="images/rect.PNG" alt="">
                 </div>
-                <br>
-
+                
 
             </div>
             <br><br><br><br>
