--- a/nature.html
+++ b/nature.html
@@ -61,27 +61,40 @@
 			<section>
 				<ul class="links">
 					<li>
-						<a href="#">
-							<h3>Lorem ipsum</h3>
-							<p>Feugiat tempus veroeros dolor</p>
+						<a href="art.html">
+							<h3>Golden Ratio And Art</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Dolor sit amet</h3>
-							<p>Sed vitae justo condimentum</p>
+						<a href="archi.html">
+							<h3>Golden Ratio And Architecture</h3>
+
+						</a>
+					</li>
+					
+					<li>
+						<a href="angle.html">
+							<h3>Relation with Golden Angle</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Feugiat veroeros</h3>
-							<p>Phasellus sed ultricies mi congue</p>
+						<a href="rule.html">
+							<h3>Golden Ratio and Rule of Thirds</h3>
+
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<h3>Etiam sed consequat</h3>
-							<p>Porta lectus amet ultricies</p>
+						<a href="geometry.html">
+							<h3>Usage in Geometry</h3>
+
+						</a>
+					</li>
+					<li>
+						<a href="fibonacci.html">
+							<h3>Fibonacci and Golden Ratio</h3>
+
 						</a>
 					</li>
 				</ul>
@@ -95,7 +108,6 @@
 			</section>
 
 		</section>
-
 
 
 		<div class="container">
@@ -174,7 +186,7 @@
 				<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
 				<li><a href="contact.html" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
-			
+
 		</section>
 
 	</div>
