--- a/fibonacci.html
+++ b/fibonacci.html
@@ -24,10 +24,10 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">Golden Ratio</a></h1>
+			<h1><a href="index1.html">Golden Ratio</a></h1>
 			<nav class="links">
 				<ul>
-					<li><a href="index.html"><b>Home</b></a></li>
+					<li><a href="index1.html"><b>Home</b></a></li>
 					<li><a href="art.html">Art</a></li>
 					<li><a href="nature.html">Nature</a></li>
 					<li><a href="angle.html">Golden Angle</a></li>
