--- a/calculate.html
+++ b/calculate.html
@@ -22,10 +22,10 @@
 
         <!-- Header -->
         <header id="header">
-            <h1><a href="index.html">Golden Ratio</a></h1>
+            <h1><a href="index1.html">Golden Ratio</a></h1>
             <nav class="links">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index1.html">Home</a></li>
                     <li><a href="art.html">Art</a></li>
                     <li><a href="nature.html">Nature</a></li>
                     <li><a href="angle.html">Golden Angle</a></li>
