added login and signup

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             </header>
 
             <ul class="actions special">
-                <li><button class="btn btn-outline-danger" data-toggle="modal" data-target="#loginModal">Login</button>
+                <li><button class="button large fit" data-toggle="modal" data-target="#loginModal">Login</button>
                 </li>
-                <li><button class="btn btn-outline-danger" data-toggle="modal" data-target="#signupModal">Sign
+                <li><button class="button large fit" data-toggle="modal" data-target="#signupModal">Sign
                         Up</button></li>
 
             </ul>
@@ -113,7 +113,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                    <h2 class="modal-title" id="exampleModalLabel">Login</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -133,7 +133,7 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="button medium fit">Submit</button>
                     </form>
 
                 </div>
@@ -151,7 +151,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Sign Up</h5>
+                    <h2 class="modal-title" id="exampleModalLabel">Sign Up</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -174,7 +174,7 @@
                             <input type="password" class="form-control" id="exampleInputPassword1">
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="button medium fit">Submit</button>
                     </form>
                 </div>
                 <div class="modal-footer">
